<resources>
    <string name="app_name">Hotel Reservation System</string>
    <string name="welcome_text">Welcome to Hotel Reservation System</string>
    <string name="confirm_my_search">CONFIRM MY SEARCH</string>
    <string name="search">Search</string>
    <string name="number_of_guests">Number of Guests</string>
    <string name="checkout_date">Checkout Date</string>
    <string name="checkin_date">Checkin Date</string>
    <string name="guest_name">Guest Name</string>
    <string name="clear">Clear</string>
    <string name="retrieve_from_shared_pref">Retrieve From Shared Pref</string>
    <string name="guest_details">Guest Details</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="submit">Submit</string>
    <string name="price">Price</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="name_of_the_guest">Name of the guest</string>
</resources>