<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">


        <TextView
            android:id="@+id/guest_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_the_guest"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:id="@+id/guest_name_edit_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/guest_name_text_view"
            app:layout_constraintStart_toEndOf="@+id/guest_name_text_view"
            app:layout_constraintTop_toTopOf="@+id/guest_name_text_view" />

        <TextView
            android:id="@+id/guest_gender_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gender"
            app:layout_constraintTop_toBottomOf="@id/guest_name_edit_text_view"
            app:layout_constraintStart_toStartOf="@id/guest_name_text_view"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/gender_radio_group"
            app:layout_constraintLeft_toLeftOf="@+id/guest_name_edit_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/guest_gender_text_view"
            app:layout_constraintTop_toTopOf="@+id/guest_gender_text_view">

        <RadioButton
            android:id="@+id/male_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            app:layout_constraintLeft_toLeftOf="@+id/guest_name_edit_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/guest_gender_text_view"
            app:layout_constraintTop_toTopOf="@+id/guest_gender_text_view" />


        <RadioButton
            android:id="@+id/female_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/female"
            app:layout_constraintBottom_toBottomOf="@+id/male_radiobutton"
            app:layout_constraintStart_toEndOf="@+id/male_radiobutton"
            app:layout_constraintTop_toTopOf="@+id/male_radiobutton" />

        <RadioButton
            android:id="@+id/other_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/other"
            app:layout_constraintBottom_toBottomOf="@+id/female_radiobutton"
            app:layout_constraintStart_toEndOf="@+id/female_radiobutton"
            app:layout_constraintTop_toTopOf="@+id/female_radiobutton" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>