<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hotel_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:text="@string/guest_name"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hotel_name_value_text_view"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/hotel_name_text_view"
                app:layout_constraintStart_toEndOf="@+id/hotel_name_text_view"
                app:layout_constraintTop_toTopOf="@+id/hotel_name_text_view"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/checkin_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/checkin_date"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/hotel_name_text_view"
                app:layout_constraintStart_toStartOf="@id/hotel_name_text_view"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkin_value_text_view"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@+id/hotel_name_value_text_view"
                app:layout_constraintBottom_toBottomOf="@+id/checkin_text_view"
                app:layout_constraintTop_toTopOf="@+id/checkin_text_view" />

            <TextView
                android:id="@+id/checkout_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/checkout_date"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/checkin_text_view"
                app:layout_constraintStart_toStartOf="@id/checkin_text_view"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkout_value_text_view"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@+id/checkin_value_text_view"
                app:layout_constraintBottom_toBottomOf="@+id/checkout_text_view"
                app:layout_constraintTop_toTopOf="@+id/checkout_text_view" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/price"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/checkout_text_view"
                app:layout_constraintStart_toStartOf="@id/checkout_text_view"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/price_value_text_view"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@+id/checkout_value_text_view"
                app:layout_constraintBottom_toBottomOf="@+id/price_text_view"
                app:layout_constraintTop_toTopOf="@+id/price_text_view" />

            <TextView
                android:id="@+id/guest_details_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:text="@string/guest_details"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/price_text_view"
                app:layout_constraintStart_toStartOf="@id/price_text_view"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/guest_details_recyclerView"
                app:layout_constraintTop_toBottomOf="@id/guest_details_text_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/guest_reservation_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guest_details_recyclerView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>